// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App changes the class when hovered 1`] = `
Array [
  "hello",
  <a
    className="leave"
    href="einfobank.net"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    leave
  </a>,
  <button
    onClick={[Function]}
  >
    wangboC1
  </button>,
]
`;

exports[`App changes the class when hovered 2`] = `
Array [
  "hello",
  <a
    className="enter"
    href="einfobank.net"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    enter
  </a>,
  <button
    onClick={[Function]}
  >
    wangboC1
  </button>,
]
`;

exports[`App changes the class when hovered 3`] = `
Array [
  "hello",
  <a
    className="leave"
    href="einfobank.net"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    leave
  </a>,
  <button
    onClick={[Function]}
  >
    wangboC1
  </button>,
]
`;
